--- a/build.xml
+++ b/build.xml
@@ -49,6 +49,10 @@
 		<property name="db.dir" value="db/memcached"/>
 		<antcall target="dbcompile"/>
 	</target>
+        <target name="dbcompile-roma" depends="compile">
+                <property name="db.dir" value="db/RomaClients"/>
+                <antcall target="dbcompile"/>
+        </target>
 
    	<target name="dbcompile-mongodb" depends="compile">
 		<property name="db.dir" value="db/mongodb"/>
@@ -96,7 +100,9 @@
     </target>
 
    	<target name ="makejar" description="Create a jar for the YCSB project">
-		<jar jarfile="build/ycsb.jar" includes="**/*.class" basedir="${classes.dir}"/>
+	        <jar jarfile="build/ycsb.jar" includes="**/*.class" basedir="${classes.dir}">
+                <zipgroupfileset dir="${lib.dir}" includes="**/*.jar" />
+                </jar>
 	</target>
    	
     <target name="clean">
